infra/traefik/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dashboard-ipallowlist
  namespace: kube-system
spec:
  ipAllowList:
    sourceRange:
      - "118.36.224.186/32"
      - "5.6.7.8/32"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.neidn.com`)
      kind: Rule
      middlewares:
        - name: dashboard-ipallowlist
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    certResolver: letsencrypt
